[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-sbe"
version = "0.1.0"
description = "Binance WebSocket feed handler for bookTicker and other streams"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "binance-sdk-spot>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]